<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_home"
    tools:context=".ui.views.domain.UserFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_124"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="88dp" />

    <ImageView
        android:id="@+id/fr_user_btn_back"
        android:layout_width="@dimen/imageButtonSize"
        android:layout_height="@dimen/imageButtonSize"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/guideline114"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline_124" />

    <TextView
        android:id="@+id/textView"
        style="@style/AppBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintBottom_toTopOf="@+id/guideline114"
        app:layout_constraintEnd_toStartOf="@+id/guideline104"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline_124" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="628dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/gray_transparent"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/guideline64"
        app:layout_constraintTop_toTopOf="@+id/guideline114"
        app:layout_constraintVertical_bias="0.16">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fr_profile_avatar"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/fr_user_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fr_profile_avatar" />

            <TextView
                android:id="@+id/fr_user_text_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/role"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/fr_profile_avatar"
                app:layout_constraintStart_toStartOf="@+id/fr_profile_avatar"
                app:layout_constraintTop_toBottomOf="@+id/fr_user_text_name" />

            <TextView
                android:id="@+id/fr_user_text_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/age"
                android:textColor="@color/gray"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/fr_user_text_role"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fr_user_text_name"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="#20FFFFFF"
                app:cardCornerRadius="28dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fr_user_text_role">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/comfortaa_bold"
                        android:text="@string/about"
                        android:textColor="@color/gray"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView7">

                        <TextView
                            android:id="@+id/fr_user_text_about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="20dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/about_multi"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />
                    </ScrollView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/fr_user_btn_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="113dp"
                android:layout_marginEnd="129dp"
                android:background="@drawable/custom_video_button"
                android:text="@string/video"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>